Links no longer render on top of scrollbar

--- a/src/ui/ProcessContent.css
+++ b/src/ui/ProcessContent.css
@@ -13,7 +13,7 @@
 }
 
 .processContent__scrollWrapper {
-    overflow: auto;
+    overflow: scroll;
 }
 
 .processContent__canvas, .processContent__scrollWrapper {
